solution-files/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-svc
            port:
              number: 80
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: resultserver-svc
            port:
              number: 80
